--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,32 @@
 
 body{
     margin: 1px;
+    font-family: 'Roboto', sans-serif;
+
 }
 header{
     font-family: "Shrikhand";
     text-align: center;
-    box-shadow: 0 0 0.3rem rgb(165, 165, 161);
+    position: relative;
+    box-shadow: 0 0 0.5rem rgb(165, 165, 161);
     padding: 0.5rem;
 }
+
+.location{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 150%;
+    background-color: #f3f3f3;
+    padding: 0.1rem;
+    gap: 2rem;
+    font-size: 25px;
+    
+}
+
+.bi-geo-alt-fill, i{
+    
+font-size: 2.3rem;
+}
+
