--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@ body{
     font-family: 'Roboto', sans-serif;
 
 }
+
+
+.ohmy-logo{
+    font-size: 120%;
+}
 header{
     font-family: "Shrikhand";
     text-align: center;
@@ -29,12 +34,33 @@ header{
     background-color: #f3f3f3;
     padding: 0.1rem;
     gap: 2rem;
-    font-size: 25px;
+    
     
 }
 
 .bi-geo-alt-fill, i{
     
-font-size: 2.3rem;
+font-size: 2rem;
 }
 
+#decouverte{
+    text-align: center;
+    font-size: 1rem;
+}
+h1{
+    font-size: 22px;
+}
+
+.choix{
+
+}
+
+.explorez{
+    text-align: center;
+    font-size: 25px;
+}
+
+button{
+
+border-radius: 100rem;
+}
