--- a/layout/header.scss
+++ b/layout/header.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap');
+*,::before,
+::after{
+    box-sizing: border-box;
+}
 
 header{
     font-family: "Shrikhand";
@@ -21,5 +27,6 @@ header{
     
 font-size: 0.9rem;
 }
+
 }
 
