--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@ body{
 
 
 .ohmy-logo, img{
-    width: 40%;
+width: 160px;
 }
-
 header{
     font-family: "Shrikhand";
     text-align: center;
@@ -54,7 +53,7 @@ h1{
 
 
 #decouverte h2{
-    font-size: 2rem;
+    font-size: 2.3rem;
 }
 
 #decouverte p{
@@ -75,13 +74,6 @@ box-shadow: 2px 1px 10px -2px #0000;
 }
 #decouverte button:hover{
     opacity: 0.7;
-    transform: scale(1.03);
-    
+    transform: scale(1.03);   
 }
 
-.gradient{
-    width: 90wh;
-    height: 50vh;
-    border: 1px solid blue;
-
-}
