--- a/style.scss
+++ b/style.scss
@@ -1,86 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap');
-*,
-::before,
-::after{
-    box-sizing: border-box;
-    
-}
 
-body{
-    margin: 1px;
-    font-family: 'Roboto', sans-serif;
-
-}
-
-
-.ohmy-logo, img{
-    width: 50%;
-}
 @import "./Sass/base.css";
 @import" ./sass/layout/header";
-
-header{
-    font-family: "Shrikhand";
-    text-align: center;
-    position: relative;
-    box-shadow: 0 0 0.5rem rgb(165, 165, 161);
-    padding: 0.5rem;
-}
-
-.location{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 150%;
-    background-color: #f3f3f3;
-    padding: 0.5rem;
-    gap: 0.5rem;  
-
-/*.bi-geo-alt-fill,*/ i{
-    
-font-size: 0.9rem;
-}
-}
-#decouverte{
-    text-align: center;
-    font-size: 1rem;
-}
-h1{
-    font-size: 1rem;
-}
-
-
-#decouverte h2{
-    font-size: 2rem;
-}
-
-#decouverte p{
-font-size: 1.2rem;
-}
-
- button{
-border: none;
-border-radius: 2rem;
-background-image: linear-gradient(#FF79DA, #9356DC);
-color: white;
-padding: 0.7rem;
-margin-top: 0.5rem;
-transition: transform 160ms;
-transform: all;
-box-shadow: 2px 1px 10px -2px #0000;
-
-}
-#decouverte button:hover{
-    opacity: 0.7;
-    transform: scale(1.03);
-    
-}
-
-.gradient{
-    width: 90wh;
-    height: 50vh;
-    border: 1px solid blue;
-
-}
+@import ".sass/layout/decouverte";
+@import ".sass/layout/location";
+@import "./Sass/layout/tuto";
