--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,3 @@
-
-@import "./Sass/base.css";
-@import" ./sass/layout/header";
-@import ".sass/layout/decouverte";
-@import ".sass/layout/location";
-@import "./Sass/layout/tuto";
+body{
+    background-color: black;
+}
